--- a/Sitecore.CodeGenerator.Tests/Sitecore.CodeGenerator.Tests.csproj
+++ b/Sitecore.CodeGenerator.Tests/Sitecore.CodeGenerator.Tests.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TemplatesResolverRainbowTest.cs" />
     <Compile Include="TemplatesResolverTest.cs" />
   </ItemGroup>
   <ItemGroup>
